# deadworks

./: .gitignore  deadworks.slnx  docker-compose.yaml
.github/workflows/: build.yml  docker.yml  update-game-exported.yml  update-protos.yml  update-sourcesdk.yml
config/: deadworks_mem.jsonc
deadworks/: deadworks.vcxproj  deadworks.vcxproj.filters
deadworks/src/: startup.cpp
docker/: Dockerfile  build-native.sh  entrypoint.sh
examples/: Directory.Build.props  ExamplePlugins.slnx
launcher/: .gitignore  index.html  package.json  vite.config.ts
launcher/src/: App.module.css  App.tsx  index.css  main.tsx
launcher/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
launcher/src-tauri/capabilities/: default.json
launcher/src-tauri/icons/: icon.icns
launcher/src-tauri/src/: addons.rs  connect.rs  gameinfo.rs  lib.rs  main.rs  ping.rs
managed/: ConCommandManager.cs  DeadworksConfig.cs  DeadworksManaged.csproj  EntryPoint.cs  HandlerRegistry.cs  PluginLoader.ChatCommands.cs  PluginLoader.CustomEvents.cs  PluginLoader.EntityIO.cs  PluginLoader.Events.cs  PluginLoader.PluginBus.cs  PluginLoader.cs  PluginRegistrationTracker.cs  ServerBrowser.cs
managed/Commands/: CommandBinder.cs  CommandRegistration.cs  CommandTokenizer.cs
managed/DeadworksManaged.Api/: Chat.cs  ConCommandEntry.cs  ConCommandInfoNative.cs  ConVar.cs  ConVarEntry.cs  ConVarInfoNative.cs  DeadworksManaged.Api.csproj  DeadworksPluginBase.cs  HeroTypeExtensions.cs  IDeadworksPlugin.cs  NativeCallbacks.cs  NativeInterop.cs  PluginRegistry.cs  Server.cs
managed/DeadworksManaged.Generators/: DeadworksManaged.Generators.csproj
managed/DeadworksManaged.Tests/: CustomEventsTests.cs  DeadworksManaged.Tests.csproj  PluginBusTests.cs
protobuf/: base_gcmessages.pb.h  citadel_clientmessages.pb.cc  citadel_clientmessages.pb.h  citadel_gcmessages_common.pb.cc  citadel_gcmessages_common.pb.h  citadel_usermessages.pb.h  gcsdk_gcmessages.pb.h  steammessages.pb.h  steammessages_steamlearn.steamworkssdk.pb.h
scripts/: update-game-exported.py  update-protos.py  validate-signatures.py
(+141 files in other folders)
